[package]
name = "kizuna"
version = "0.1.0"
authors = ["Golbakh Mikhail <golbah@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.50"
byteorder = "1.4.3"
bytes = "1.0.1"
rand = "0.8.4"
tokio = { version = "1", features = ["full"] }
udp_sas = "0.1.3"
